--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-burger-menu": "^2.6.11",
-    "react-dom": "^16.8.6",
-    "react-hamburger-menu": "^1.1.1"
+    "react-dom": "^16.8.6"
   }
 }
